# BloodyGameEngine

./: README.md
client/: CMakeLists.txt
common/: AutoRotate.h  CollisionDetectionSystem.cpp  CollisionDetectionSystem.h  ILineRenderer.h  Physics2D.h  Physics2DSystem.cpp  Physics2DSystem.h  Player.cpp  Player.h  PlayerMoveSystem.cpp  PlayerMoveSystem.h  PolylineVisualSystem.h
demo/: BallTestService.cpp  BallTestService.h  CMakeLists.txt  CollisionTestService.cpp  CollisionTestService.h  CreateEntityTestService.cpp  CreateEntityTestService.h  LinearMovement.h  LinearMovementSystem.cpp  Player.cpp  Player.h  PlayerMovementSystem.h  PlayerTestService.cpp  PlayerTestService.h  main.cpp
